include_directories(${anttrackingUNIL_SOURCE_DIR}/inc)

add_executable(change_tagid change_tagid.cpp exception.cpp utils.cpp datfile.cpp tags3.cpp)
add_executable(controldat controldat.cpp datfile.cpp tags3.cpp exception.cpp)
add_executable(define_death define_death.cpp exception.cpp datfile.cpp tags3.cpp utils.cpp)
add_executable(filter_interactions_cut_immobile filter_interactions_cut_immobile.cpp exception.cpp tags3.cpp utils.cpp)
add_executable(filter_interactions_no_cut filter_interactions_no_cut.cpp exception.cpp tags3.cpp utils.cpp)
add_executable(heatmap3_tofile heatmap3_tofile.cpp datfile.cpp exception.cpp tags3.cpp histogram.cpp statistics.cpp utils.cpp)
add_executable(interaction_all_close_contacts interaction_all_close_contacts.cpp exception.cpp tags3.cpp utils.cpp)
add_executable(interaction_any_overlap interaction_any_overlap.cpp exception.cpp tags3.cpp utils.cpp)
add_executable(interaction_close_front_contacts interaction_close_front_contacts.cpp exception.cpp tags3.cpp utils.cpp)
add_executable(time_investment time_investment.cpp exception.cpp utils.cpp plume.cpp datfile.cpp tags3.cpp)
add_executable(trackconverter trackconverter_modular.cpp exception.cpp tags3.cpp utils.cpp trackconverter_functions.cpp)
add_executable(rajectory trajectory.cpp datfile.cpp exception.cpp tags3.cpp)
add_executable(zone_converter zone_converter.cpp exception.cpp utils.cpp plume.cpp datfile.cpp)
